--- a/package.json
+++ b/package.json
@@ -6,7 +6,9 @@
     "dev": "vite",
     "build": "vite build",
     "preview": "vite preview",
-    "type-check": "vue-tsc --noEmit"
+    "type-check": "vue-tsc --noEmit",
+    "lint": "eslint --ext .ts,.js,.vue src",
+    "lint:fix": "eslint --ext .ts,.js,.vue src --fix"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -14,10 +16,18 @@
     "vue": "^3.2.45"
   },
   "devDependencies": {
+    "@eslint/js": "^9.30.1",
+    "@typescript-eslint/eslint-plugin": "^8.36.0",
+    "@typescript-eslint/parser": "^8.36.0",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/tsconfig": "^0.7.0",
+    "eslint": "^9.30.1",
+    "eslint-config-prettier": "^10.1.5",
+    "eslint-plugin-vue": "^9.33.0",
+    "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
+    "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.0.1"
   }
 }
