--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "preview": "vite preview",
     "type-check": "vue-tsc --noEmit",
     "lint": "eslint --ext .ts,.js,.vue src",
-    "lint:fix": "eslint --ext .ts,.js,.vue src --fix"
+    "lint:fix": "eslint --ext .ts,.js,.vue src --fix",
+    "prepare": "husky"
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.11",
@@ -24,10 +25,18 @@
     "eslint": "^9.30.1",
     "eslint-config-prettier": "^10.1.5",
     "eslint-plugin-vue": "^9.33.0",
+    "husky": "^9.1.7",
+    "lint-staged": "^16.1.2",
     "prettier": "^3.6.2",
     "typescript": "^5.8.3",
     "vite": "^5.4.19",
     "vue-eslint-parser": "^10.2.0",
     "vue-tsc": "^3.0.1"
+  },
+  "lint-staged": {
+    "*.{js,ts,vue}": [
+      "eslint --fix",
+      "prettier --write"
+    ]
   }
 }
