--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   },
   "dependencies": {
     "@heroicons/vue": "^2.2.0",
+    "@neondatabase/serverless": "^1.0.1",
     "@tailwindcss/vite": "^4.1.11",
+    "pg": "^8.16.3",
     "tailwindcss": "^4.1.11",
     "vue": "^3.2.45"
   },
@@ -21,6 +23,7 @@
     "@eslint/js": "^9.30.1",
     "@typescript-eslint/eslint-plugin": "^8.36.0",
     "@typescript-eslint/parser": "^8.36.0",
+    "@vercel/node": "^5.3.6",
     "@vitejs/plugin-vue": "^4.6.2",
     "@vue/tsconfig": "^0.7.0",
     "eslint": "^9.30.1",
